--- a/src/assets/styles/core.less
+++ b/src/assets/styles/core.less
@@ -38,3 +38,39 @@ a {
   padding: 100px 0px 50px;
   color: #222;
 }
+
+/* Loading splash screen */
+
+#loading-screen {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  z-index: 999999;
+}
+
+#loading-content {
+  display: inline-block;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #aaa;
+  position: absolute;
+  width: 100px;
+  height: 64px;
+  top: 50%;
+  left: 50%;
+  margin-top: -32px;
+  margin-left: -45px; /* 5px off to re-center image */
+  img {
+    height: 40px;
+    display: block;
+    opacity: .3;
+    margin-bottom: 5px;
+    margin-left: -10px;
+  }
+}
