Formatted support page

--- a/src/app/components/about/aboutView.html
+++ b/src/app/components/about/aboutView.html
@@ -1,4 +1,4 @@
-<div class="section gradient-up" id="intro-section">
+<div class="section gradient-up text-section" id="intro-section">
   <div class="inner-section">
     <div class="section-title">Hi there, we're CSS Bristol!</div>
     <div class="section-content clear">
