--- a/src/app/components/jobs/jobView.html
+++ b/src/app/components/jobs/jobView.html
@@ -1,4 +1,4 @@
-<div class="section gradient-up" id="intro-section" style="margin-bottom:0">
+<div class="section gradient-up text-section" id="intro-section" style="margin-bottom:0">
   <div class="inner-section">
     <div class="section-title">Job openings</div>
     <div class="section-content clear">
