--- a/src/app/components/about/aboutView.html
+++ b/src/app/components/about/aboutView.html
@@ -49,15 +49,15 @@
       </div>
 
       <div class="committee-item">
-        <img src="/assets/images/contrib/committee/default.png" alt="Equality Officer image" />
-        <div class="item-name">Vacant</div>
+        <img src="/assets/images/contrib/committee/equality.jpg" alt="Equality Officer image" />
+        <div class="item-name">Rini Veeravalli</div>
         <div class="item-position">Equality &amp; Diversity</div>
         <a class="item-email" href="mailto:equality@cssbristol.co.uk" target="_blank">equality@cssbristol.co.uk</a>
       </div>
 
       <div class="committee-item last-item">
-        <img src="/assets/images/contrib/committee/default.png" alt="Press Officer image" />
-        <div class="item-name">Vacant</div>
+        <img src="/assets/images/contrib/committee/press.jpg" alt="Press Officer image" />
+        <div class="item-name">Ben Marshall</div>
         <div class="item-position">Press</div>
         <a class="item-email" href="mailto:press@cssbristol.co.uk" target="_blank">press@cssbristol.co.uk</a>
       </div>
