Minor syntactic mistakes

--- a/src/app/components/wellbeing/wellbeingView.html
+++ b/src/app/components/wellbeing/wellbeingView.html
@@ -4,15 +4,15 @@
 # Rational behind this page
 ###
 
-To provide as much information on the support avilable to students as possible in the most clear and concise way.
+To provide as much information on the support available to students as possible in the most clear and concise way.
 
 Key Considerations:
 - Provide information on the situations each service is equipped to deal with.
-- Contact information: email, web, phone, address.
-- Many students do not speak English as their first language. Keep the sentence construction and vocabulary clear and easy to parse.
+- Contact information where applicable: website, email, web, phone, address.
+- Many students do not speak English as their first language. Keep the sentence construction and vocabulary clear and easy to understand.
 - Aim for inclusivity of information, rather than only the most common problems
-- Some of this content might make people feel uncomfortable to see. This might be because they find the topic awkward, have been personally affected by it, or are sceptical about the severity / worth / importance of the problem. Any and all steps should be taken to make people feel comfortable with the content, and explain why it is nessecary.
-- While the page aims to have as much information is possible, make sure it is all framed in a way such that it's relevance is immediately clear to computer science students.
+- Some of this content might make people feel uncomfortable to see. This might be because they find the topic awkward, have been personally affected by it, or are skeptical about the severity / worth / importance of the problem. Any and all steps should be taken to make people feel comfortable with the content, and explain why it is necessary.
+- While the page aims to have as much information as possible, make sure it is all framed in a way such that its relevance is immediately clear to computer science students.
 
 -->
 
