Initial version of tutorials listing
Currently no actual pages backing the listing; need to reformat; no filtering/sorting as the Isotope support is hardcoded for the Jobs board

--- a/src/assets/styles/sections.resp.less
+++ b/src/assets/styles/sections.resp.less
@@ -78,7 +78,7 @@
     width: 50%;
     &.last-item {
       width: 50%;
-    }  
+    }
   }
 }
 
@@ -92,7 +92,7 @@
     width: 100%;
     &.last-item {
       width: 100%;
-    }  
+    }
   }
 
   #new-sponsor {
@@ -165,6 +165,20 @@
 
 @media (max-width: 700px) {
   .job-item {
+    width: 100%;
+  }
+}
+
+/* Tutorials section styles */
+
+@media (max-width: 1050px) {
+  .tutorial-item {
+    width: ~"calc(100% - 22.5px)";
+  }
+}
+
+@media (max-width: 700px) {
+  .tutorial-item {
     width: 100%;
   }
 }
