--- a/src/assets/styles/sections.less
+++ b/src/assets/styles/sections.less
@@ -178,7 +178,7 @@
   background-image: linear-gradient(lighten(#3b5998, 5%), darken(#3b5998, 5%));
 }
 #social-twitter {
-  background-image: linear-gradient(lighten(#4099ff, 5%), darken(#4099ff, 5%));  
+  background-image: linear-gradient(lighten(#4099ff, 5%), darken(#4099ff, 5%));
 }
 #social-github {
   width: 33.4%;
@@ -419,7 +419,7 @@
     display: inline-block;
   }
   &:before {
-    content: ''; 
+    content: '';
     background-size: 100%;
     background-repeat: no-repeat;
     position: absolute;
@@ -441,6 +441,82 @@
     background-image: url('/assets/images/core/jobs/deadline-icon.png');
   }
   &.job-tags:before {
+    background-image: url('/assets/images/core/jobs/tag-icon.png');
+  }
+}
+
+
+/* Job section styles */
+
+#tutorials-section {
+  margin-bottom: 20px;
+}
+
+.tutorial-item {
+  width: ~"calc(33.3% - 30px)";
+  /*margin: 0px 25px 50px;*/
+  margin-bottom: 45px;
+  float: left;
+  border: 1px solid #eee;
+  border-radius: 2px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  padding: 20px;
+  color: #222;
+  background: #fff;
+  transition: box-shadow .2s;
+  &:hover {
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.tutorial-thumbnail {
+  text-align: center;
+  margin-bottom: 20px;
+  height: 50px;
+  img {
+    max-width: 200px;
+    max-height: 50px;
+  }
+}
+
+.tutorial-name {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 22px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.tutorial-meta {
+  font-size: 12px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin: 10px 0px;
+  padding-left: 25px;
+  position: relative;
+  span {
+    font-size: 10px;
+    padding: 2px 5px;
+    border: 1px solid #eee;
+    border-radius: 2px;
+    margin: 0px 5px 5px 0px;
+    display: inline-block;
+  }
+  &:before {
+    content: '';
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 1px;
+    left: 0;
+    width: 14px;
+    height: 14px;
+  }
+  &.tutorial-date:before {
+    background-image: url('/assets/images/core/jobs/date-icon.png');
+  }
+  &.tutorial-tags:before {
     background-image: url('/assets/images/core/jobs/tag-icon.png');
   }
 }
